--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,20 @@
             <version>2.12.0</version>
         </dependency>
 
+        <!-- 二维码生成、解析 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.3</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
