--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--Hutool工具库-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
