--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>5.7.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.3.13.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
