--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-redis</artifactId>
+            <version>4.1.94.Final</version>
+        </dependency>
 
     </dependencies>
 
