--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
             <version>1.7.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
